force-app/main/default/objects/Loan_Rate__c/Loan_Rate__c.object-meta.xml
<CustomObject>
    <label>Loan Rate</label>
    <nameField>
        <label>Loan Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>