force-app/main/default/objects/Loan_Rate__c/fields/Comparison_rate__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Rate__c</fullName>
    <label>Comparison Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>