force-app/main/default/objects/Loan_Rate__c/fields/Interest_rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_rate__c</fullName>
    <label>Interest rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>