force-app/main/default/objects/Loan_Rate__c/fields/To_amount__c.field-meta.xml
<CustomField>
    <fullName>To_amount__c</fullName>
    <label>To amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>